--- a/about.html
+++ b/about.html
@@ -43,7 +43,21 @@
                 <p>A web dashboard that analyses weather changes at different latitudes relative to the equator line.
                     The data visualization shows temperature, humidity, cloudiness and wind speed trend. It also provided insights that cities closer to the equator line are warmer. 
                 </p>
-              </div>
+            </div>
+            <div class="grid-item">
+              <a href="https://github.com/ofunkey/SP500_Investment"><strong>S&P 500 Investment </strong></a>
+              <div>Python | JavaScript -D3 | Plotly | HTML/CSS | SQL | Python</div>
+              <p>This project analysed and visualized the best stock selection criteria over a period of 55+ months.
+                It used D3 and Plotly to show quintile performance, criteria selector and quintile vs selection criteria. It provided insights that determines the stock to invest in based on criteria, sectors and quintiles.
+              </p>
+            </div>
+            <div class="grid-item">
+              <a href="https://github.com/ofunkey/"><strong> </strong></a>
+              <div> </div>
+              <p>...
+              </p>
+            </div>
+          
 
           </div>
           
