--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
       <ul>
         <li><strong>Email:</strong> <a href="#">ofunkey@hotmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">https://github.com/ofunkey</a></li>
+        <li><strong>Resume:</strong> <a href="#">https://ofunkey.github.io/Resume.pdf</a></li>        
       </ul>
     </aside>
 
