--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <aside id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">ofunkey@hotmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">https://github.com/ofunkey</a></li>
-        <li><strong>Resume:</strong> <a href="#">https://ofunkey.github.io/Resume.pdf</a></li>        
+        <li><a href="https://github.com/ofunkey"><strong>Email</strong></a></li>
+        <li><a href="https://github.com/ofunkey"><strong>Github</strong></a></li>
+        <li><a href="https://ofunkey.github.io/Resume.pdf"><strong>Resume</strong></a></li>      
       </ul>
     </aside>
 
