--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
         <img id="bio-image" src="Images/Funke1.jpg" alt="Funke Olaleye">
       </section>
 
-        <p>Funke Olaleye is a professional Computer Scientist and Data Analyst with Masters of Science in Computer Science and a certificate in Data Science from Rutgers University. She is the founder of Timbrel Inc. </p>
-        <p>She has 10+ years’ experience in Programming, Business Analysis and Business Process Improvement. She is proficient in a broad array of technologies and programming such as  Python (Pandas, NumPy, Matplotlib, JSON), R, JavaScript, SQL Databases (SQL, PostgreSQL, NoSQL, MongoDB), Tableau, Big Data, Machine Learning, Advanced Excel and VBA. 
-           She has worked in major banking and technology firms including BlackBerry, TD Bank and CIBC Bank as a Business Analyst.</p>
-        <p>While doing her master in Computer Science, she did a ground breaking research in Computer Networking with focus on improving Voice over Internet Protocol (VoIP) quality.</p>
+        <p>Funke Olaleye is a Data Analyst with Masters of Science in Computer Science and a certificate in Data Science from Rutgers University. She is the founder of Timbrel Inc. </p>
+        <p>She has 10+ years’ experience in Business Analysis and Business Process Improvement. She is proficient in a broad array of technologies and programming such as  Python, R, SQL Databases (SQL, PostgreSQL, NoSQL, MongoDB), Tableau, Big Data, Machine Learning, Advanced Excel and VBA. 
+           She has worked in major banking and technology firms. She has successfully delivered high profile projects for BlackBerry, TD Bank and CIBC as a Business Analyst.</p>
+        <p>Her passion for Data Science and Cybersecurity earned her the "Least person to expose data to 3rd parties" award from Rutgers University.</p>
 
         <hr>
           
