--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <ul>
         <li><a href="https://github.com/ofunkey"><strong>Email</strong></a></li>
         <li><a href="https://github.com/ofunkey"><strong>Github</strong></a></li>
-        <li><a href="https://ofunkey.github.io/Resume.pdf"><strong>Resume</strong></a></li>      
+        <li><a href="https://github.com/ofunkey/ofunkey.github.io/blob/master/Resume.pdf"><strong>Resume</strong></a></li>      
       </ul>
     </aside>
 
