--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
         <img id="bio-image" src="Images/Funke1.jpg" alt="Funke Olaleye">
       </section>
 
-        <p>Funke Olaleye is a Data Analyst with Masters of Science in Computer Science and a certificate in Data Science from Rutgers University. She is the founder of Timbrel Inc. </p>
-        <p>She has 10+ years’ experience in Business Analysis and Business Process Improvement. She is proficient in a broad array of technologies and programming such as  Python, R, SQL Databases (SQL, PostgreSQL, NoSQL, MongoDB), Tableau, Big Data, Machine Learning, Advanced Excel and VBA. 
-           She has worked in major banking and technology firms. She has successfully delivered high profile projects for BlackBerry, TD Bank and CIBC as a Business Analyst.</p>
-        <p>Her passion for Data Science and Cybersecurity earned her the "Least person to expose data to 3rd parties" award from Rutgers University.</p>
+        <p>Funke Olaleye is a Data Scientist with a decade of experience driving business impact through advanced analytics, machine learning, deep learning and NLP across Telecommunications and Tech. </p>
+        <p>Proven track record of transforming unstructured, multi-source data into actionable frameworks that mitigate churn, and optimize customer experience.</p>
+        <p>Expert in leading cross-functional initiatives, mentoring data scientists, and bridging the gap between complex modeling and executive-level strategy to drive enterprise profitability.</p>
 
         <hr>
           
